Final touch ups

--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -13,9 +13,9 @@
     <div class="window">
       <header>
         <button class="arrow">
-          <h2>&nbsp &#10094 &nbsp &nbsp BACK TO ALL PLANTS</h2>
+          <h2>&nbsp; &#10094; &nbsp; &nbsp; BACK TO ALL PLANTS</h2>
         </button>
-        <button class="heart"> &#9825 </button>
+        <button class="heart"> &#9825; </button>
       </header>
       <div class="main">
         <div class="left-content">
@@ -24,7 +24,7 @@
         <div class="right-content">
           <h1 class="title1"> CLASSIC PEACE LILY</h1>
           <h3 class="title2"> POPULARE HOUSE PLANT</h3>
-          <p class="paragraph price"> &#36 18</p>
+          <p class="paragraph price"> &#36; 18</p>
           <p class="paragraph">Classic Peace Lily is a spathiphyllum floor plant arranged in a bamboo planter with a blue and red ribbon and a butterly pick.
           </p>
           <button class="btn1">ADD TO CART</button>
