--- a/assignment15/index.html
+++ b/assignment15/index.html
@@ -10,7 +10,7 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css" charset="utf-8">
 
-  <title>Ministry-of-League</title>
+  <title>Luana-Assignment 15</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
   </nav>
   <section class="content">
     <div class="section1">
-      <button class="arrow-btn left" onclick="OnClickLeft();"><i class="fa fa-arrow-left"></i></button>
+      <button class="arrow-btn left"><i class="fa fa-arrow-left"></i></button>
 
       <div class="slide active">
         <h3 class="title-welcome">WELCOME</h3>
@@ -62,28 +62,26 @@
       </div>
 
       <div class="slide ">
-        <h3 class="title-welcome">ABOUT US</h3>
-        <p class="title-summoner">FOR REAL</p>
+        <h3 class="title-welcome">What is Lorem Lipsum?</h3>
+        <p class="title-summoner">Info</p>
         <hr>
         <p class="title-paragraph">
-          We are the <b>Ministry</b>, a resource for <b>League of Legends</b> players and <b>MOBA</b> enthusiasts alike. We strive to provide a learning environment where beginners to the <b>MOBA</b> genre can learn, and where veteran players can master
-          their skills.
+          Standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled import Standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled import
         </p>
         <button class="title-btn">LEARN MORE</button>
       </div>
 
       <div class="slide ">
-        <h3 class="title-welcome">CONTACT US</h3>
-        <p class="title-summoner">MORE INFO</p>
+        <h3 class="title-welcome">Why are we using it?</h3>
+        <p class="title-summoner">Read More</p>
         <hr>
         <p class="title-paragraph">
-          We are the <b>Ministry</b>, a resource for <b>League of Legends</b> players and <b>MOBA</b> enthusiasts alike. We strive to provide a learning environment where beginners to the <b>MOBA</b> genre can learn, and where veteran players can master
-          their skills.
+          Standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled import Standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled import
         </p>
         <button class="title-btn">LEARN MORE</button>
       </div>
 
-      <button class="arrow-btn right" onclick="OnClickRight(this)"><i class="fa fa-arrow-right"></i></button>
+      <button class="arrow-btn right"><i class="fa fa-arrow-right"></i></button>
     </div>
 
 
@@ -329,10 +327,10 @@
                 </div>
               </div>
             </div>
-              <div class="cb">
-                <button class="btn"> <b>></b> </button>
-                <button class="btn"> <b><</b> </button>
-              </div>
+            <div class="cb">
+              <button class="btn"> <b>></b> </button>
+              <button class="btn"> <b><</b> </button>
+            </div>
           </div>
         </div>
 
@@ -393,7 +391,7 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-12 ">
-            <div id="rows_byclick" class="row">
+          <div id="rows_byclick" class="row">
           </div>
         </div>
       </div>
@@ -413,7 +411,7 @@
         </div>
         <div class="col-md-4">
           <div class="video-col">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/v/U6Vjn31Olkk">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/v/c2AZn-4LIXo">
             </iframe>
           </div>
         </div>
@@ -436,7 +434,7 @@
             <h4>Transparent Data, Quick Decitions</h4>
             <hr>
             <p class="section4-paragraph">
-              Sactuary was designed to be a quick and meaningful addition to your loading screen experience, providing you details and information that makes sense to every kind of gamer  and MOBA Stratagist.
+              Sactuary was designed to be a quick and meaningful addition to your loading screen experience, providing you details and information that makes sense to every kind of gamer and MOBA Stratagist.
             </p>
             <hr>
             <p>
